--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="Owl" default="package" basedir=".">
-	<property name="version" value="0.2.0" />
+	<property name="version" value="1.0.0" />
 
 	<!-- Package -->
 	<target name="package">
@@ -13,6 +13,7 @@
 				<include name="classes/**" />
 				<include name="bootstrap.php" />
 				<include name="README.md" />
+				<include name="LICENSE.md" />
 			</fileset>
 		</zip>
 	</target>
